chore: Update contact email address across platform
- Changed from demond.balentine@atlasschool.com to balentinetechsolutions@gmail.com
- Updated all 12 translation files
- Updated package.json author field
- Updated Swagger API documentation
- Updated all documentation files
- Updated investor and conversion guides

--- a/translations/de.json
+++ b/translations/de.json
@@ -153,7 +153,7 @@
     "copyright": "Urheberrecht",
     "allRightsReserved": "Alle Rechte vorbehalten",
     "developedBy": "Entwickelt von Demond Balentine",
-    "contactEmail": "demond.balentine@atlasschool.com",
+    "contactEmail": "balentinetechsolutions@gmail.com",
     "phone": "479-250-2573"
   },
   "partners": {
