--- a/translations/es.json
+++ b/translations/es.json
@@ -153,7 +153,7 @@
     "copyright": "Derechos de Autor",
     "allRightsReserved": "Todos los derechos reservados",
     "developedBy": "Desarrollado por Demond Balentine",
-    "contactEmail": "demond.balentine@atlasschool.com",
+    "contactEmail": "balentinetechsolutions@gmail.com",
     "phone": "479-250-2573"
   },
   "partners": {
