--- a/translations/fr.json
+++ b/translations/fr.json
@@ -153,7 +153,7 @@
     "copyright": "Droits d'Auteur",
     "allRightsReserved": "Tous droits réservés",
     "developedBy": "Développé par Demond Balentine",
-    "contactEmail": "demond.balentine@atlasschool.com",
+    "contactEmail": "balentinetechsolutions@gmail.com",
     "phone": "479-250-2573"
   },
   "partners": {
