--- a/translations/hi.json
+++ b/translations/hi.json
@@ -177,7 +177,7 @@
     "copyright": "कॉपीराइट",
     "allRightsReserved": "सर्वाधिकार सुरक्षित",
     "developedBy": "विकसित: Demond Balentine",
-    "contactEmail": "demond.balentine@atlasschool.com",
+    "contactEmail": "balentinetechsolutions@gmail.com",
     "phone": "479-250-2573"
   },
   "partners": {
