--- a/translations/it.json
+++ b/translations/it.json
@@ -177,7 +177,7 @@
     "copyright": "Copyright",
     "allRightsReserved": "Tutti i diritti riservati",
     "developedBy": "Sviluppato da Demond Balentine",
-    "contactEmail": "demond.balentine@atlasschool.com",
+    "contactEmail": "balentinetechsolutions@gmail.com",
     "phone": "479-250-2573"
   },
   "partners": {
