--- a/translations/ja.json
+++ b/translations/ja.json
@@ -177,7 +177,7 @@
     "copyright": "著作権",
     "allRightsReserved": "全著作権所有",
     "developedBy": "開発者：Demond Balentine",
-    "contactEmail": "demond.balentine@atlasschool.com",
+    "contactEmail": "balentinetechsolutions@gmail.com",
     "phone": "479-250-2573"
   },
   "partners": {
