--- a/translations/ko.json
+++ b/translations/ko.json
@@ -177,7 +177,7 @@
     "copyright": "저작권",
     "allRightsReserved": "모든 권리 보유",
     "developedBy": "개발자: Demond Balentine",
-    "contactEmail": "demond.balentine@atlasschool.com",
+    "contactEmail": "balentinetechsolutions@gmail.com",
     "phone": "479-250-2573"
   },
   "partners": {
