--- a/translations/ru.json
+++ b/translations/ru.json
@@ -177,7 +177,7 @@
     "copyright": "Авторские права",
     "allRightsReserved": "Все права защищены",
     "developedBy": "Разработано Demond Balentine",
-    "contactEmail": "demond.balentine@atlasschool.com",
+    "contactEmail": "balentinetechsolutions@gmail.com",
     "phone": "479-250-2573"
   },
   "partners": {
