--- a/translations/ar.json
+++ b/translations/ar.json
@@ -177,7 +177,7 @@
     "copyright": "حقوق النشر",
     "allRightsReserved": "جميع الحقوق محفوظة",
     "developedBy": "تطوير: Demond Balentine",
-    "contactEmail": "demond.balentine@atlasschool.com",
+    "contactEmail": "balentinetechsolutions@gmail.com",
     "phone": "479-250-2573"
   },
   "partners": {
