--- a/translations/en.json
+++ b/translations/en.json
@@ -153,7 +153,7 @@
     "copyright": "Copyright",
     "allRightsReserved": "All rights reserved",
     "developedBy": "Developed by Demond Balentine",
-    "contactEmail": "demond.balentine@atlasschool.com",
+    "contactEmail": "balentinetechsolutions@gmail.com",
     "phone": "479-250-2573"
   },
   "partners": {
