--- a/translations/pt.json
+++ b/translations/pt.json
@@ -177,7 +177,7 @@
     "copyright": "Direitos Autorais",
     "allRightsReserved": "Todos os direitos reservados",
     "developedBy": "Desenvolvido por Demond Balentine",
-    "contactEmail": "demond.balentine@atlasschool.com",
+    "contactEmail": "balentinetechsolutions@gmail.com",
     "phone": "479-250-2573"
   },
   "partners": {
