--- a/translations/zh.json
+++ b/translations/zh.json
@@ -177,7 +177,7 @@
     "copyright": "版权",
     "allRightsReserved": "保留所有权利",
     "developedBy": "开发者：Demond Balentine",
-    "contactEmail": "demond.balentine@atlasschool.com",
+    "contactEmail": "balentinetechsolutions@gmail.com",
     "phone": "479-250-2573"
   },
   "partners": {
